Interpreter/Examples/bad/example9.jam
/* Another syntax error - no declaration block but using declaration */
main{
    int x = 0;
} 
